--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,9 @@
+@media (max-width: 1632px) {
+  .nav1 {
+    font-size: 11px;
+  }
+}
+
 @media (max-width: 1445px) {
   #trusted + h1 {
     font-size: 41px;
@@ -12,9 +18,16 @@
   .button-overlay {
     width: 80%;
   }
-  .search-btn + button {
+
+  /* .search-btn + button {
     font-size: 8px !important;
-  }
+  } */
+
+  /* .frame18 .blueButton{
+  width: 130px;
+  height: 56px;
+
+} */
 }
 
 @media (max-width: 1342px) {
@@ -30,11 +43,21 @@
     padding-right: 30px !important;
   }
   .navNew {
-    padding: 12px 0px;
+    padding: 16px 0px;
   }
   .frame29 {
     justify-content: center;
   }
+}
+
+@media (max-width: 1270px) {
+  .frame29 p {
+    margin-right: 167px;
+  }
+  #cardImg {
+  width: 100%;
+  height: auto;
+}
 }
 
 @media (min-width: 1041px) {
@@ -77,14 +100,22 @@
     height: 20px;
   }
 
-  .search-btn + button {
+  /* .search-btn + button {
     font-size: 8px !important;
     height: 30px;
     padding: 8px 16px !important;
-  }
+  } */
   .search-btn {
     width: 40px;
     height: 40px;
+  }
+  .border + span {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 26px;
+    vertical-align: middle;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   #trusted {
@@ -102,7 +133,10 @@
   .frame8,
   .frame7,
   .frame10 {
-    gap: 14px;
+    gap: 9px;
+  }
+  .frame8 > span {
+    font-size: 10px;
   }
 
   .our-services h1 {
@@ -139,6 +173,19 @@
     flex-direction: column;
   }
   .formDiv {
+    justify-content: center;
+  }
+  .accordion-button {
+    width: 100%;
+  }
+  .accordion-body {
+    width: 100%;
+  }
+  .row .col-12 {
+    justify-content: center;
+  }
+  .row .c3,
+  .row .c2 {
     justify-content: center;
   }
   .frame26 {
@@ -186,7 +233,14 @@
     align-items: center;
     justify-content: center;
   }
-
+  .frame29 {
+    flex-direction: column;
+    align-items: center;
+    /* gap: 70px; */
+  }
+  .frame29 p {
+    margin-right: 0;
+  }
   .banner-content {
     gap: 6px !important;
   }
@@ -206,13 +260,20 @@
     justify-content: center;
     align-items: center;
   }
+  .test-form .col-12{
+    display: flex;
+
+  }
+  .testimonial-card{
+    margin-right: 0;
+  }
 }
 
-@media (min-width: 650px) and (max-width: 996px) {
+/* @media (min-width: 650px) and (max-width: 996px) {
   .card-col .card {
     width: 80%;
   }
-}
+} */
 
 @media (min-width: 768px) {
   .navbar-collapse {
@@ -232,7 +293,7 @@
   .container-md,
   .container-sm {
     max-width: 1360px;
-    padding: 0px 84px;
+    /* padding: 0px 84px; */
   }
 }
 
@@ -295,7 +356,10 @@
     width: 26px !important;
     height: 26px !important;
   }
-  #trusted + h1 {
+  .border {
+    padding: 7px 7px;
+  }
+  .fr #trusted + h1 {
     font-size: 20px;
   }
   #trusted {
@@ -303,9 +367,6 @@
     line-height: 2px;
   }
 
-  .border + span {
-    padding: 0px 2px;
-  }
   .frame7 {
     gap: 4px;
   }
@@ -315,6 +376,9 @@
     border-radius: 20px;
 
     padding: 9px 14px;
+  }
+  .frame29 {
+    margin-top: 35px;
   }
 
   .blueButton + button {
@@ -372,13 +436,20 @@
     margin-bottom: 20px;
     padding: 0px 18px;
   }
+  #flag-icon {
+    height: 21px;
+    width: 21px;
+  }
 }
 
 @media (max-width: 480px) {
   .frame25 h2 {
     font-size: 23px;
   }
-
+  #flag-icon {
+    height: 13px;
+    width: 13px;
+  }
   .meet-our {
     font-size: 23px;
   }
@@ -420,6 +491,9 @@
   .border {
     width: 20px !important;
     height: 20px !important;
+  }
+  .border {
+    padding: 5px 5px;
   }
 
   /* .frame23 img {
@@ -473,15 +547,19 @@
   }
 
   #flag-icon {
-    height: 17px;
-    width: 17px;
+    height: 10px;
+    width: 10px;
   }
-  #country {
+  /* #country {
     width: 40px;
-  }
+  } */
   #arrow svg {
     width: 10px;
     height: 10px;
+  }
+  #navLogo {
+    height: auto;
+    width: 144px;
   }
 }
 
