--- a/css/media.css
+++ b/css/media.css
@@ -48,6 +48,22 @@
   .frame29 {
     justify-content: center;
   }
+  #logoDiv {
+    margin-bottom: 70px;
+  }
+  .up {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .linkDiv {
+    align-items: center;
+  }
+  #anchorDiv {
+    margin-left: 0;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 @media (max-width: 1270px) {
@@ -55,9 +71,24 @@
     margin-right: 167px;
   }
   #cardImg {
-  width: 100%;
-  height: auto;
-}
+    width: 100%;
+    height: auto;
+  }
+  .footer-logo {
+    justify-content: center;
+  }
+  .linkDiv {
+    align-items: center;
+    justify-content: center;
+  }
+  .links {
+    align-items: center;
+  }
+  .anchorDiv {
+    align-items: center;
+    justify-content: center;
+    text-align: center !important;
+  }
 }
 
 @media (min-width: 1041px) {
@@ -198,7 +229,7 @@
 
   .frame25 {
     text-align: center;
-
+    align-items: center;
     margin-top: 60px;
   }
   .frame23 {
@@ -260,16 +291,30 @@
     justify-content: center;
     align-items: center;
   }
-  .test-form .col-12{
+  .test-form .col-12 {
     display: flex;
-
   }
-  .testimonial-card{
+  .testimonial-card {
     margin-right: 0;
   }
-  #exp{
+  #exp {
     width: 400px;
   }
+  .frame25 ul {
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 0 auto;
+    width: fit-content;
+  }
+}
+
+@media (min-width: 992px) {
+    /* .c2 {
+        flex: 0 0 auto;
+        width: %;
+    } */
 }
 
 /* @media (min-width: 650px) and (max-width: 996px) {
@@ -305,9 +350,21 @@
     font-size: 14px;
   }
 
-  .footer-logo {
-    justify-content: center;
+  #anchorDiv {
+    gap: 20px;
   }
+  .linkDiv h4 {
+    font-size: 16px;
+  }
+  .links a {
+    font-size: 14px;
+  }
+  .frame41 h3{
+  font-size: 28px;
+}
+.frame41 form{
+  font-size: 14px;
+}
 
   /* .imgDiv {
     max-height: 544px;
@@ -367,7 +424,7 @@
   }
   #trusted {
     font-size: 6px;
-    line-height: 2px;
+    line-height: 3px;
   }
 
   .frame7 {
@@ -388,6 +445,9 @@
     padding: 1px 4px !important;
     white-space: normal !important; /* allow text to wrap */
     border-radius: 20px !important;
+  }
+  #anchorDiv {
+    gap: 11px;
   }
   .banner2 h1 {
     font-size: 33px;
@@ -430,6 +490,9 @@
     font-size: 10px;
   }
   #our-services-btn {
+    width: 130px;
+    height: auto;
+    padding: 2px 10px;
     font-size: 10px;
     margin-bottom: 20px;
   }
@@ -442,6 +505,12 @@
   #flag-icon {
     height: 21px;
     width: 21px;
+  }
+}
+
+@media (max-width: 540px) {
+  #anchorDiv {
+    flex-direction: column;
   }
 }
 
@@ -472,8 +541,12 @@
   .carousel-control-next .crousel-icon-cont {
     right: 15px;
   }
+
   .row {
     --bs-gutter-x: 0rem !important;
+  }
+  #exp {
+    width: 242px;
   }
   .frame3,
   .frame11 {
