--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,7 @@ a {
   top: 0;
   right: -70%;
   width: 70%;
-  height: 100%;
+  height: 10vh;
   background: #fff;
   transition: right 0.3s ease-in-out;
   z-index: 1001;
