--- a/css/media.css
+++ b/css/media.css
@@ -311,7 +311,7 @@
 }
 
 @media (min-width: 992px) {
-    /* .c2 {
+  /* .c2 {
         flex: 0 0 auto;
         width: %;
     } */
@@ -322,6 +322,16 @@
     width: 80%;
   }
 } */
+
+/* Default: 4 in a row (already done) */
+
+/* Medium screens: 2 per row */
+@media (max-width: 991px) {
+  #anchorDiv {
+    flex-wrap: wrap; /* allow wrapping */
+    gap: 40px 60px; /* row gap 40px, column gap 72px */
+  }
+}
 
 @media (min-width: 768px) {
   .navbar-collapse {
@@ -359,9 +369,12 @@
   .links a {
     font-size: 14px;
   }
-  .frame41 h3{
-  font-size: 28px;
-}
+  .frame41 h3 {
+    font-size: 28px;
+  }
+  #anchorDiv .linkDiv {
+    flex: 0 0 100%; /* full width */
+  }
 
   /* .imgDiv {
     max-height: 544px;
