--- a/css/media.css
+++ b/css/media.css
@@ -509,7 +509,7 @@
   .badge {
     font-size: 10px;
     font-size: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     padding: 0px 18px;
   }
   #flag-icon {
@@ -527,6 +527,7 @@
 @media (max-width: 480px) {
   .frame25 h2 {
     font-size: 23px;
+    line-height: 115%;
   }
   #flag-icon {
     height: 13px;
